--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Voyages and travels -- Juvenile literature'
 - !lcc 'PZ'
+- GITenberg
 title: Rollo on the Atlantic
 url: http://www.gutenberg.org/ebooks/22252
